--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     // 🧠 Examples of usage:
     // processSingleLearner({ name: "Elisabeth", lovesJS: 1 }) // should return { name: "Elisabeth", lovesJS: true }
     // processSingleLearner({ name: "Pete", age: 23, lovesJS: 0 }) // should return { name: "Pete", age: 23, lovesJS: false }
-    const processSingleLearner = () => {
-
+    const processSingleLearner = (learner) => {
+      if (learner.lovesJS === 0) {
+        learner.lovesJS = false
+      } else if (learner.lovesJS === 1) {
+        learner.lovesJS = true
+      }
+      return learner
     }
 
     // 👉 CHALLENGE 2
@@ -41,8 +46,15 @@
     // ❗ Notes:
     // 🧠 There are many approaches to this problem: using a loop, using forEach, using map...
     // 🧠 Solve this challenge using a for/in loop or a for loop.
-    const processLearnersLoop = () => {
-
+    const processLearnersLoop = (learner) => {
+        for (let i = 0 ; i < learner.length ; i++) {
+          if (learner[i].lovesJS === 0) {
+            learner[i].lovesJS = false
+          } else if (learner[i].lovesJS === 1) {
+            learner[i].lovesJS = true
+          }
+        }
+        return learner
     }
 
     // 👉 CHALLENGE 3
@@ -51,8 +63,15 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the forEach method of the learners array.
     // 🧠 Use arrow functions whenever possible.
-    const processLearnerForEach = () => {
-
+    const processLearnerForEach = (learners) => {
+      learners.forEach(learner => {
+        if (learner.lovesJS === 0) {
+        learner.lovesJS = false
+      } else if (learner.lovesJS === 1) {
+        learner.lovesJS = true
+      }  
+      })
+      return learners
     }
 
     // 👉 CHALLENGE 4
@@ -61,8 +80,16 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the map method of the learners array.
     // 🧠 Use arrow functions.
-    const processLearnerMap = () => {
-
+    const processLearnerMap = (learners) => {
+      let result = learners.map(learner => {
+        if (learner.lovesJS === 0) {
+        learner.lovesJS = false
+      } else if (learner.lovesJS === 1) {
+        learner.lovesJS = true
+      }
+      return learner
+      } )
+      return result
     }
 
     // 👉 CHALLENGE 5
@@ -73,8 +100,17 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the forEach method of the learners array.
     // 🧠 You will need to declare a result array into which you push learners from inside your forEach loop.
-    const getJavaScriptLoversForEach = () => {
-
+    const getJavaScriptLoversForEach = (learners) => {
+      let result=[]
+      learners.forEach(learner => {
+      if (learner.lovesJS) {
+        result.push(learner)
+      }
+      })
+      if (!result.length) {
+        return 'no JS lovers here!'
+      }
+      return result
     }
 
     // 👉 CHALLENGE 6
@@ -82,8 +118,16 @@
     // 🧠 It should work exactly the same as the getJavaScriptLoversForEach function above.
     // ❗ Notes:
     // 🧠 Solve this challenge using the filter method of the learners array.
-    const getJavaScriptLoversFilter = () => {
-
+    const getJavaScriptLoversFilter = (learners) => {
+      let result = learners.filter(learner => {
+        if (learner.lovesJS) {
+          return learner
+        }
+      })
+      if (!result.length) {
+        return 'no JS lovers here!'
+      }
+      return result
     }
 
     // 👉 CHALLENGE 7
@@ -98,8 +142,19 @@
     // ❗ Notes:
     // 🧠 This could be solved by using filter to make an array of odd integers, and then using forEach to add them up.
     // 🧠 Or you could opt for solving everything with a single forEach which is the recommended approach (saves a loop).
-    const sumOddInts = () => {
-
+    const sumOddInts = (arrInt) => {
+      const oddNums = []
+      const result = []
+      let sum = 0
+      arrInt.forEach(int => {
+        if (int % 2 !== 0) {
+          oddNums.push(int)
+          sum += int
+        }
+      })
+      result.push(sum)
+      result.push(oddNums)
+      return result
     }
 
     // 👉 CHALLENGE 8
@@ -113,8 +168,19 @@
     // checkInts(2, 6) // should return ["even", "even"]
     // ❗ Notes:
     // 🧠 Solve this problem using rest parameters and map.
-    const checkInts = () => {
-
+    const checkInts = (...integers) => {
+      const result = []
+      integers.map(int => {
+        if (int % 2 === 0) {
+          result.push('even')
+        } else if (int % 2 !== 0) {
+          result.push('odd')
+        }
+      })
+      if (!result.length) {
+          return 'pass some arguments, yo!'
+        }
+        return result
     }
 
     // 🧪 TESTS, do not work below this line
